--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="clear"></div>
-            <div class="">
+            <div>
                 <div class="trends">
                     <img src="https://ichef.bbci.co.uk/onesport/cps/800/cpsprodpb/1260A/production/_108347257_aduriz_kick.jpg" alt="" width="230">
                     <p> Aritz Aduriz handed Athletic Bilbao victory</p>
